--- a/emoji-prediction.ipynb
+++ b/emoji-prediction.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.svm import LinearSVC\n",
     "from sklearn.model_selection import cross_val_score\n",
     "import numpy as np\n",
     "from collections import Counter"
@@ -21,10 +22,14 @@
    "outputs": [],
    "source": [
     "# load dataset\n",
-    "with open('data/trial_semeval2018task2/es_trial.text') as f: X_es = f.readlines()\n",
-    "with open('data/trial_semeval2018task2/us_trial.text') as f: X_us = f.readlines()\n",
-    "with open('data/trial_semeval2018task2/es_trial.labels') as f: Y_es = f.readlines()\n",
-    "with open('data/trial_semeval2018task2/us_trial.labels') as f: Y_us = f.readlines()"
+    "with open('data/tweets/train_semeval2018task2/crawler/data/tweet_by_ID_10_11_2017__09_43_18.txt.text') as f: \n",
+    "    X_es = f.readlines()\n",
+    "with open('data/tweets/train_semeval2018task2/crawler/data/tweet_by_ID_10_11_2017__09_43_18.txt.labels') as f: \n",
+    "    Y_es = f.readlines()\n",
+    "with open('data/tweets/train_semeval2018task2/crawler/data/tweet_by_ID_09_11_2017__02_29_28.txt.text') as f: \n",
+    "    X_us = f.readlines()\n",
+    "with open('data/tweets/train_semeval2018task2/crawler/data/tweet_by_ID_09_11_2017__02_29_28.txt.labels') as f: \n",
+    "    Y_us = f.readlines()"
    ]
   },
   {
@@ -36,8 +41,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000\n",
-      "50000\n"
+      "98683\n",
+      "490265\n"
      ]
     }
    ],
@@ -55,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,31 +77,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "@user Haha! Yep. Bearcat loves kids too. Also extremely loving and cuddly. I feel like the strays need the most love honestly ️\n",
+      "Enhorabuena pequeña mamá por segunda vez! @ Tejeda de Tiétar\n",
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "# take a look at the dataset\n"
+    "# take a look at the dataset\n",
+    "print(X_us[0])\n",
+    "print(X_es[0])\n",
+    "print(Y_us[0])\n",
+    "print(Y_es[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.21490658,  0.21513546,  0.21522152,  0.21524305,  0.21539385])"
+       "array([ 0.33393839,  0.33468285,  0.33348292,  0.33618228,  0.33255477])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pipe = Pipeline([('tfidf', TfidfVectorizer(ngram_range=(1,3))),\n",
+    "pipe = Pipeline([('tfidf', TfidfVectorizer()),\n",
+    "                 ('clf', LinearSVC())])\n",
+    "\n",
+    "cross_val_score(pipe, X_us, Y_us, cv=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.24824857,  0.24882725,  0.24888322,  0.24944925,  0.24829668])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipe = Pipeline([('tfidf', TfidfVectorizer()),\n",
     "                 ('clf', MultinomialNB())])\n",
     "\n",
     "cross_val_score(pipe, X_us, Y_us, cv=5)"
