--- a/nn.ipynb
+++ b/nn.ipynb
@@ -27,7 +27,8 @@
     "from keras.preprocessing.text import one_hot\n",
     "from keras.preprocessing.text import Tokenizer\n",
     "from sklearn.metrics import accuracy_score, classification_report, f1_score\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from collections import defaultdict"
    ]
   },
   {
@@ -93,10 +94,10 @@
    "outputs": [],
    "source": [
     "# label encoding\n",
-    "label2idx = {label: i for i, label in enumerate(set(y_train))}\n",
-    "num_labels = len(label2idx.keys())\n",
-    "y_train = np_utils.to_categorical([label2idx[label] for label in y_train], num_classes=num_labels)\n",
-    "y_test = np_utils.to_categorical([label2idx[label] for label in y_test], num_classes=num_labels)"
+    "# label2idx = {label: i for i, label in enumerate(set(y_train))}\n",
+    "# num_labels = len(label2idx.keys())\n",
+    "# y_train = np_utils.to_categorical([label2idx[label] for label in y_train], num_classes=num_labels)\n",
+    "# y_test = np_utils.to_categorical([label2idx[label] for label in y_test], num_classes=num_labels)"
    ]
   },
   {
@@ -105,18 +106,137 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "y2i = defaultdict(lambda: len(y2i))\n",
+    "y_train_num = [y2i[mbti] for mbti in y_train]\n",
+    "y_test_num = [y2i[mbti] for mbti in y_test]\n",
+    "num_classes = len(np.unique(y_train_num))\n",
+    "print(num_classes)\n",
+    "\n",
+    "y_train_one_hot = np_utils.to_categorical(y_train_num, num_classes) #important to give the num_classes!\n",
+    "y_test_one_hot = np_utils.to_categorical(y_test_num, num_classes) #important to give the num_classes!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "20"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(set(Y_es))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "w2i = defaultdict(lambda: len(w2i))\n",
+    "PAD = w2i[\"<pad>\"] # index 0 is padding\n",
+    "UNK = w2i[\"<unk>\"] # index 1 is for UNK\n",
+    "\n",
+    "# convert words to indices, taking care of UNKs\n",
+    "X_train_num = [[w2i[word] for word in sentence.split(\" \")] for sentence in X_train]\n",
+    "w2i = defaultdict(lambda: UNK, w2i) # freeze - cute trick!\n",
+    "X_test_num = [[w2i[word] for word in sentence.split(\" \")] for sentence in X_test]\n",
+    "\n",
+    "max_sentence_length=max([len(s.split(\" \")) for s in X_train] \n",
+    "                        + [len(s.split(\" \")) for s in X_test] )\n",
+    "print(max_sentence_length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(294159, 43)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.preprocessing import sequence\n",
+    "# pad X\n",
+    "X_train_pad = sequence.pad_sequences(X_train_num, maxlen=max_sentence_length, value=PAD)\n",
+    "X_test_pad = sequence.pad_sequences(X_test_num, maxlen=max_sentence_length,value=PAD)\n",
+    "print(X_train_pad.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_size = len(w2i)\n",
+    "embeds_size=64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(113) #set seed before any keras import\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Embedding(vocab_size, embeds_size, input_length=max_sentence_length))\n",
+    "model.add(LSTM(32))\n",
+    "model.add(Dense(num_classes))\n",
+    "model.add(Activation('sigmoid'))\n",
+    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "  6112/294159 [..............................] - ETA: 58:43:18 - loss: 0.2768 - acc: 0.9399"
+     ]
+    }
+   ],
+   "source": [
+    "model.fit(X_train_pad, y_train_one_hot, epochs=3)\n",
+    "loss, accuracy = model.evaluate(X_test_pad, y_test_one_hot)"
    ]
   }
  ],
