--- a/nn.ipynb
+++ b/nn.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X_es, Y_es, test_size=0.4, random_state=0)"
+    "X_train, X_test, y_train, y_test = train_test_split(X_es, Y_es, test_size=0.9, random_state=0)"
    ]
   },
   {
@@ -115,8 +115,8 @@
    ],
    "source": [
     "y2i = defaultdict(lambda: len(y2i))\n",
-    "y_train_num = [y2i[mbti] for mbti in y_train]\n",
-    "y_test_num = [y2i[mbti] for mbti in y_test]\n",
+    "y_train_num = [y2i[emoji] for emoji in y_train]\n",
+    "y_test_num = [y2i[emoji] for emoji in y_test]\n",
     "num_classes = len(np.unique(y_train_num))\n",
     "print(num_classes)\n",
     "\n",
@@ -132,7 +132,8 @@
     {
      "data": {
       "text/plain": [
-       "20"
+       "array([ 1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.])"
       ]
      },
      "execution_count": 8,
@@ -141,7 +142,7 @@
     }
    ],
    "source": [
-    "len(set(Y_es))"
+    "y_train_one_hot[0]"
    ]
   },
   {
@@ -179,10 +180,30 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 3, 5, 6]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_num[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(294159, 43)\n"
+      "(49026, 43)\n"
      ]
     }
    ],
@@ -196,17 +217,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "vocab_size = len(w2i)\n",
-    "embeds_size=64"
+    "embeds_size=32"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,12 +238,12 @@
     "model.add(LSTM(32))\n",
     "model.add(Dense(num_classes))\n",
     "model.add(Activation('sigmoid'))\n",
-    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])"
+    "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +251,12 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/3\n",
-      "  6112/294159 [..............................] - ETA: 58:43:18 - loss: 0.2768 - acc: 0.9399"
+      "49026/49026 [==============================] - 336s 7ms/step - loss: 2.4840 - acc: 0.2607\n",
+      "Epoch 2/3\n",
+      "49026/49026 [==============================] - 325s 7ms/step - loss: 2.0342 - acc: 0.3751\n",
+      "Epoch 3/3\n",
+      "49026/49026 [==============================] - 315s 6ms/step - loss: 1.4861 - acc: 0.5401\n",
+      "441239/441239 [==============================] - 67s 153us/step\n"
      ]
     }
    ],
